# book-store-assistant

./: .gitignore  INSTALL.md  README.md  bsa.toml.example  pyproject.toml
.github/workflows/: build-windows.yml
data/input/: sample_1.csv  sample_10.csv  sample_2.csv  sample_3.csv  sample_4.csv  sample_5.csv  sample_6.csv  sample_7.csv  sample_8.csv  sample_9.csv
data/reference/: ground_truth.tsv  subjects.tsv  subjects.txt
docs/: cerlalc_research.md
packaging/: README.txt
scripts/: probe_bne.py  probe_cerlalc.py  probe_source.py  probe_spain_isbn.py
src/book_store_assistant/: cli.py  config.py  gui.py  isbn.py  models.py  subject_loader.py  subject_mapping.py  subject_selection.py  subjects.py  synopsis.py
src/book_store_assistant/bibliographic/: __init__.py  base.py  evidence.py  export.py  models.py  resolution.py  (+1 more)
tests/: test_bibliographic_export.py  test_bne.py  test_bne_parser.py  test_cached_source.py  test_cli.py  test_cli_export.py  test_cli_review_export.py  test_confidence.py  test_config.py  test_enrichment_evidence.py  test_enrichment_providers.py  test_enrichment_service.py  test_excel_export.py  test_export_rows.py  test_export_validation.py  test_fallback_source.py  test_google_books.py  test_google_books_parser.py  test_input.py  test_intermediate_fetch_results.py  test_isbndb.py  test_isbndb_parser.py  test_language_codes.py  test_llm_enrichment.py  test_models.py  test_open_library.py  test_open_library_parser.py  test_openai_bibliographic_validator.py  test_openai_generator.py  test_openai_subject_mapper.py  test_openai_validator.py  test_openai_web_bibliographic_extractor.py  test_page_descriptions.py  test_pipeline_export.py  test_pipeline_output.py  test_pipeline_review.py  test_pipeline_review_export.py  test_pipeline_service.py  test_probe_bne.py  test_probe_source.py  (+26 more)
tests/integration/: test_bibliographic_export.py  test_cli.py  test_config.py  test_google_books.py  test_input.py  test_llm_enrichment.py  test_national_sources.py  test_pipeline_service.py  test_resolution_service.py  test_staged_sources.py
tests/unit/: test_bne_parser.py  test_cli_summaries.py  test_diagnostics.py  test_editorial_cleaning.py  test_google_books_parser.py  test_isbn.py  test_isbn_routing.py  test_open_library_parser.py  test_providers.py  test_synopsis_resolution.py
(+88 files in other folders)
