[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "book-store-assistant"
version = "0.1.0"
description = "Transform ISBN CSV files into Geslib-ready Excel imports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7.1",
  "openpyxl>=3.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
book-store-assistant = "book_store_assistant.cli:app"
book-store-assistant-gui = "book_store_assistant.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=book_store_assistant --cov-report=term-missing --cov-config=pyproject.toml"

[tool.coverage.run]
omit = ["src/book_store_assistant/gui.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/book_store_assistant/sources/llm_enrichment.py" = ["E501"]
"tests/**/test_bne_parser.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
